--- a/brands.html
+++ b/brands.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Главная</title>
+	<title>Бренды</title>
 
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
@@ -39,9 +39,9 @@
 				<div class="collapse navbar-collapse navbar-right" id="navbarCollapse">
 					
 					<ul class="nav nav-pills">
-						<li class="active"><a href="index.html">Главная</a></li>
+						<li><a href="index.html">Главная</a></li>
 						<li><a href="parfumes.html">Все ароматы</a></li>
-						<li><a href="brands.html">Бренды</a></li>
+						<li class="active"><a href="brands.html">Бренды</a></li>
 						<li><a href="rating.html">Топ-продаж</a></li>
 						<li><a href="contact.html">Контакты</a></li>
 					</ul>
@@ -72,33 +72,42 @@
 					</div>
 				</form>
 
-				<h2>НОВИНКИ  |  РАСПРОДАЖА  |  ТОП ПРОДАЖ </h2>
+				<h1>Бренды</h1>
+				
+<hr>
+<h2 class="text-center">Женские ароматы</h2>
+<hr>
+<h3>ADIDAS</h3>
+<div class="row">
+
+<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
+<a href="show.html"><img src="assets/img/Adidas_Born_Original_Today_for_Her_EDT__50mL_.jpg" alt="Born Original Today for Her"></a>
+<div class="film_label"><a href="show.html">Born Original Today EDT</a></div>
+</div>
+
+<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
+<a href="#"><img src="assets/img/adidas_pure_lightness_edt_30ml_.jpg" alt="Pure Lightness"></a>
+<div class="film_label"><a href="#">Pure Lightness EDT</a></div>
+</div>
+
+<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
+<a href="#"><img src="assets/img/adidas_get_ready_for_her.jpg" alt="Get Ready!"></a>
+<div class="film_label"><a href="#">Get Ready! EDT</a></div>
+</div>
+
+<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
+<a href="#"><img src="assets/img/adidas_fizzy_energy_edt_75ml__1.jpg" alt="Fizzy Energy"></a>
+<div class="film_label"><a href="#">Fizzy Energy EDT</a></div>
+</div>
+
+<hr>
+<h3>HUGO BOSS</h3>
 <hr>
 <div class="row">
 
 <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-<a href="show.html"><img src="assets/img/women.png" alt="women"></a>
-<div class="film_label"><a href="show.html">Женская парюмерия</a></div>
-</div>
-
-<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-<a href="#"><img src="assets/img/men.png" alt="матрица"></a>
-<div class="film_label"><a href="#">Мужская парюмерия</a></div>
-</div>
-
-<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-<a href="#"><img src="assets/img/ot.png" alt="облачный атлас"></a>
-<div class="film_label"><a href="#">Отливанты</a></div>
-</div>
-
-<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-<a href="#"><img src="assets/img/top.png" alt="безумный макс"></a>
-<div class="film_label"><a href="#">Популярные товары</a></div>
-</div>
-
-<div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-<a href="#"><img src="assets/img/new.png" alt=""></a>
-<div class="film_label"><a href="#">Новые поступления</a></div>
+<a href="#"><img src="assets/img/boss_ma_vie_florale_50ml_carton_flacon.jpg" alt="Boss Ma Vie"></a>
+<div class="film_label"><a href="#">Boss Ma Vie EDP</a></div>
 </div>
 
 <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
