--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 					<ul class="nav nav-pills">
 						<li><a href="index.html">Главная</a></li>
 						<li><a href="parfumes.html">Все изделия</a></li>
-						<li><a href="#">Бренды</a></li>
+						<li><a href="brands.html">Бренды</a></li>
 						<li><a href="rating.html">Топ-продаж</a></li>
 						<li class="active"><a href="contact.html">Контакты</a></li>
 					</ul>
@@ -62,7 +62,7 @@
 
 			<div class="col-lg-9 col-lg-push-3">
 
-				<from role="search" class="visible-xs">
+				<form role="search" class="visible-xs">
 					<div class="form-group">
 						<div class="input-group">
 							<input type="search" class="form-control input-lg" placeholder="Ваш запрос">
@@ -71,16 +71,16 @@
 							</div>
 						</div>
 					</div>
-				</from>
+				</form>
 
 				<h1>Контакты</h1>
 				<hr>
 
-				<p>Отправьте ваш отзыв о портале Кинобаза</p>
+				<p>Отправьте ваш отзыв о портале Парфюмер</p>
 				
 
 
-				<from>
+				<form>
 					<div class="form-group">
 						<input type="text" placeholder="ваше имя" class="form-control input-lg">
 					</div>
@@ -91,7 +91,7 @@
 						<textarea class="form-control"></textarea>
 					</div>
 					<button class="btn btn-lg btn-warning pull-right">отправить</button>
-				</from>
+				</form>
 
 				<div class="margin-8 clear"></div>
 
