--- a/parfumes.html
+++ b/parfumes.html
@@ -41,7 +41,7 @@
 					<ul class="nav nav-pills">
 						<li><a href="index.html">Главная</a></li>
 						<li class="active"><a href="parfumes.html">Все изделия</a></li>
-						<li><a href="#">Бренды</a></li>
+						<li><a href="brands.html">Бренды</a></li>
 						<li><a href="rating.html">Топ-продаж</a></li>
 						<li><a href="contact.html">Контакты</a></li>
 					</ul>
@@ -60,7 +60,7 @@
 
 			<div class="col-lg-9 col-lg-push-3">
 
-				<from role="search" class="visible-xs">
+				<form role="search" class="visible-xs">
 					<div class="form-group">
 						<div class="input-group">
 							<input type="search" class="form-control input-lg" placeholder="Ваш запрос">
@@ -69,97 +69,112 @@
 							</div>
 						</div>
 					</div>
-				</from>
+				</form>
 
-				<h1>Фильмы</h1>
-				<hr>
-
-				<div class="row">
-					<div class="well clearfix">
-						<div class="col-lg-3 col-md-2 text-center">
-							<img class="img-thumbnail" src="assets/img/inter.png" alt="интерстеллар">
-							<p>Интерстеллар</p>
-						</div>
-
-						<div class="col-lg-9 col-md-10">
-							<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, numquam, mollitia. Porro sit iure natus possimus iste perspiciatis est itaque ullam. Blanditiis fuga mollitia, quaerat porro a magnam corporis vel!
-							</p>
-						</div>
-
-						<div class="col-lg-12 col-md-12">
-							<a href="show.html" class="btn btn-lg btn-warning pull-right">подробнее</a>
-						</div>
-
-					</div>
-
-				</div>
-
-
-				<div class="row">
-					<div class="well clearfix">
-						<div class="col-lg-3 col-md-2 text-center">
-							<img class="img-thumbnail" src="assets/img/matrix.png" alt="матрица">
-							<p>Матрица</p>
-						</div>
-
-						<div class="col-lg-9 col-md-10">
-							<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, numquam, mollitia. Porro sit iure natus possimus iste perspiciatis est itaque ullam. Blanditiis fuga mollitia, quaerat porro a magnam corporis vel!
-							</p>
-						</div>
-
-						<div class="col-lg-12 col-md-12">
-							<a href="" class="btn btn-lg btn-warning pull-right">подробнее</a>
-						</div>
-
-					</div>
-
-				</div>
-
-
-				<div class="row">
-					<div class="well clearfix">
-						<div class="col-lg-3 col-md-2 text-center">
-							<img class="img-thumbnail" src="assets/img/cloud.png" alt="облачный атлас">
-							<p>Облачный атлас</p>
-						</div>
-
-						<div class="col-lg-9 col-md-10">
-							<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, numquam, mollitia. Porro sit iure natus possimus iste perspiciatis est itaque ullam. Blanditiis fuga mollitia, quaerat porro a magnam corporis vel!
-							</p>
-						</div>
-
-						<div class="col-lg-12 col-md-12">
-							<a href="" class="btn btn-lg btn-warning pull-right">подробнее</a>
-						</div>
-
-					</div>
-
-				</div>
-
-				
-				<div class="row">
-					<div class="well clearfix">
-						<div class="col-lg-3 col-md-2 text-center">
-							<img class="img-thumbnail" src="assets/img/max.png" alt="безумный макс">
-							<p>Безумный макс</p>
-						</div>
-
-						<div class="col-lg-9 col-md-10">
-							<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, numquam, mollitia. Porro sit iure natus possimus iste perspiciatis est itaque ullam. Blanditiis fuga mollitia, quaerat porro a magnam corporis vel!
-							</p>
-						</div>
-
-						<div class="col-lg-12 col-md-12">
-							<a href="" class="btn btn-lg btn-warning pull-right">подробнее</a>
-						</div>
-
-					</div>
-
-				</div>
+				<h1>Парфюмерия</h1>​
+<hr>​
+​
+<div class="row">​
+<div class="well clearfix">​
+<div class="col-lg-3 col-md-2 text-center">​
+<img class="img-thumbnail" src="assets/img/BurberryBody.png" alt="Burberry Body (Барберри Боди)">​
+<p>Burberry Body («Барберри Боди»)</p>​
+</div>​
+​
+<div class="col-lg-9 col-md-10">​
+<p>​
+​
+Burberry Body («Барберри Боди»)  совсем новый женский аромат от известного английского бренда, чьи продажи одновременно стартовали в 150 странах мира 1 сентября 2011. Яркий, сладкий аромат, сочетающий в себе сладкие фруктовые и страстные восточные ноты.​
+Дизайнеры Барберри специально для нового парфюма разработали непривычный для этой марки флакон. Боди упакован в изящную и тонкую бутылочку, по форме напоминающий классическую «гильзу» для помады.​
+Сладкий фруктовый запах Body перекликается с более привычным ароматом от Барберри – Weekend. Weekend – это вкусные и позитивные духи, где главную роль играет шиповник и мандарин.​
+​
+Парфюмерная композиция. Верхние ноты: полынь, персик, фрезия; ноты сердца: ирис и роза; базовые ноты: кашемировое дерево, сандаловое дерево, мускус, амбра и ваниль.​
+​
+​
+</p>​
+</div>​
+​
+<div class="col-lg-12 col-md-12">​
+<a href="show.html" class="btn btn-lg btn-warning pull-right">подробнее</a>​
+</div>​
+​
+</div>​
+​
+</div>​
+​
+​
+<div class="row">​
+<div class="well clearfix">​
+<div class="col-lg-3 col-md-2 text-center">​
+<img class="img-thumbnail" src="assets/img/PacoRabanneInvictus.png" alt="Paco Rabanne Invictus (Пако Рабан Инвиктус)">​
+<p>Paco Rabanne Invictus (Пако Рабан Инвиктус)</p>​
+</div>​
+​
+<div class="col-lg-9 col-md-10">​
+<p>​
+Paco Rabanne Invictus («Пако Рабанн. Инвиктус») – это новый парфюм для мужчин 2013 года. Принадлежит семейству водных, древесных групп ароматов. Яркий, спортивный и бодрящий букет подойдет смелым, активным и оптимистичным мужчинам.​
+​
+Парфюм выделит самые выдающиеся акценты в характере своего обладателя и добавит образу шарма, открытости и современности. Прекрасный вариант для всех случаев – парфюм для настоящего победителя! Также для мужчин, ценящих динамичный стиль, мы можем предложить освежающий аромат Marc O'Polo Pure Morning Man.​
+​
+Верхние ноты Paco Rabanne Invictus открываются свежими мотивами морских нот и грейпфрута. Сердце аромата окутывает уютными нотами лаврового листа и жасмина. В завершении композиции мягко сочетаются теплые тона пачули, гваякового дерева, амбры и дубового мха.​
+Подробнее: https://randewoo.ru/product/paco-rabanne-invictus.​
+</p>​
+</div>​
+​
+<div class="col-lg-12 col-md-12">​
+<a href="" class="btn btn-lg btn-warning pull-right">подробнее</a>​
+</div>​
+​
+</div>​
+​
+</div>​
+​
+​
+<div class="row">​
+<div class="well clearfix">​
+<div class="col-lg-3 col-md-2 text-center">​
+<img class="img-thumbnail" src="assets/img/PacoRabanne1Million.png" alt="Paco Rabanne 1 Million (Пако Рабан 1 Миллион)">​
+<p>Paco Rabanne 1 Million (Пако Рабан 1 Миллион)</p>​
+</div>​
+​
+<div class="col-lg-9 col-md-10">​
+<p>​
+​
+Роскошный аромат в новом 1 Million от Paco Rabanne. Мужественный и яркий золотой слиток открывает свои долгожданные двери стабильности и роскоши. Первые ноты парфюма 1 Million представлены розой удивительно сочетающейся со специями, даря чувственность и мужественность. Древесные ноты вместе с оттенками кожи и пачули придадут элегантность и уверенность вашему образу. Уникальность характера 1 Million дает своему владельцу: обжигающую цитрусовую прохладу, пробуждающую чувства и заряжающую энергией на весь день. Композицию 1 Million составляют: красный апельсин, грейпфрут, корица, мята, абсолю розы, специи, белая древесина, амбра, индонезийские пачули, белая кожа.​
+​
+</p>​
+</div>​
+​
+<div class="col-lg-12 col-md-12">​
+<a href="" class="btn btn-lg btn-warning pull-right">подробнее</a>​
+</div>​
+​
+</div>​
+​
+</div>​
+​
+​
+<div class="row">​
+<div class="well clearfix">​
+<div class="col-lg-3 col-md-2 text-center">​
+<img class="img-thumbnail" src="assets/img/AjmalRoseWood.png" alt="Ajmal Rose Wood (Аджмал Руз Вуд)">​
+<p>Ajmal Rose Wood (Аджмал Руз Вуд)</p>​
+</div>​
+​
+<div class="col-lg-9 col-md-10">​
+<p>​
+Древесно-цветочное чудо Востока нашло сочетание в нотах аромата Ajmal Rose Wood, выпущенного в конце 2015 года вместе с ароматом Orchidee Celeste. Нежный, таинственный и притягательный аромат с первых аккордов звучит многообещающе и роскошно, завораживая своими переплетениями. Аромат открывается цветочными мотивами с ярким и вспыльчивым ароматом розы в неистовом сочетании и совершенстве с бодрящими специями. Её сияние и восторг прекрасно дополняется вкраплениями пудровых, чувственных и пьянящих нот, создающее впечатление полной эйфории и свободы. Финальные аккорды композиции до достоинству принадлежат окутывающим древесным нотам с пряным ароматов уда и мускуса. Аромат Ajmal Rose Wood был выпущен как универсальный аромат для мужчин и женщин, в нем каждый найдет что-то своё особенное и неповторимое, однако женская половина человечества относится к нему с большей любовью и вниманием.​
+</p>​
+</div>​
+​
+<div class="col-lg-12 col-md-12">​
+<a href="" class="btn btn-lg btn-warning pull-right">подробнее</a>​
+</div>​
+​
+</div>​
+​
+</div>​
+​
 
 
 				<div class="margin-8 clear"></div>
