--- a/rating.html
+++ b/rating.html
@@ -40,8 +40,8 @@
 					
 					<ul class="nav nav-pills">
 						<li><a href="index.html">Главная</a></li>
-						<li><a href="parfumes.html">Все изделия</a></li>
-						<li><a href="#">Бренды</a></li>
+						<li><a href="parfumes.html">Все ароматы</a></li>
+						<li><a href="brands.html">Бренды</a></li>
 						<li class="active"><a href="rating.html">Топ-продаж</a></li>
 						<li><a href="contact.html">Контакты</a></li>
 					</ul>
@@ -68,53 +68,53 @@
 						</div>
 					</form>
 
-					<h1>Рейтинг фильмов</h1>
+					<h1>Топ-продаж</h1>
 					<hr>
 					
 					<table class="table table-stripped">
 						<thead>
 							<tr>
 								<th></th>
-									<th>Фильм</th>
-									<th class="text-center">Год</th>
-									<th class="text-center">Рейтинг</th>
+									<th>Парфюм</th>
+									<th class="text-center">Год выпуска</th>
+									<th class="text-center">Цена</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
 								<td class="col-lg-1 col-md-1 col-xs-2">
-									<img src="assets/img/inter.png" alt="интерстеллар" class="img-responsive img-thumbnail">
+									<img src="assets/img/BurberryBody.png" alt="Burberry Body (Барбери Боди)" class="img-responsive img-thumbnail">
 								</td>
-								<td class="vert-align"><a href="show.html">Интерстеллар</a></td>
-								<td class="text-center vert-align">2014</td>
-								<td class="text-center vert-align"><span class="badge">8.1</span></td>
+								<td class="vert-align"><a href="show.html">Burberry Body (Барбери Боди), 60мл</a></td>
+								<td class="text-center vert-align">2011</td>
+								<td class="text-center vert-align"><span class="badge">40.00</span></td>
 							</tr>
 
 							<tr>
 								<td class="col-lg-1 col-md-1 col-xs-2">
-									<img src="assets/img/cloud.png" alt="Облачный атлас" class="img-responsive img-thumbnail">
+									<img src="assets/img/PacoRabanneInvictus.png" alt="Paco Rabanne Invictus (Пако Рабан Инвиктус)" class="img-responsive img-thumbnail">
 								</td>
-								<td class="vert-align"><a href="#">Облачный атлас</a></td>
-								<td class="text-center vert-align">2012</td>
-								<td class="text-center vert-align"><span class="badge">8.0</span></td>
+								<td class="vert-align"><a href="#">Paco Rabanne Invictus (Пако Рабан Инвиктус), 100мл</a></td>
+								<td class="text-center vert-align">2013</td>
+								<td class="text-center vert-align"><span class="badge">60.00</span></td>
 							</tr>
 
 							<tr>
 								<td class="col-lg-1 col-md-1 col-xs-2">
-									<img src="assets/img/matrix.png" alt="Матрица" class="img-responsive img-thumbnail">
+									<img src="assets/img/PacoRabanne1Million.png" alt="Paco Rabanne 1 Million (Пако Рабан 1 Миллион)" class="img-responsive img-thumbnail">
 								</td>
-								<td class="vert-align"><a href="#">Матрица</a></td>
-								<td class="text-center vert-align">1999</td>
-								<td class="text-center vert-align"><span class="badge">7.9</span></td>
+								<td class="vert-align"><a href="#">Paco Rabanne 1 Million (Пако Рабан 1 Миллион), 100мл</a></td>
+								<td class="text-center vert-align">2008</td>
+								<td class="text-center vert-align"><span class="badge">50.00</span></td>
 							</tr>
 
 							<tr>
 								<td class="col-lg-1 col-md-1 col-xs-2">
-									<img src="assets/img/max.png" alt="Безучный макс" class="img-responsive img-thumbnail">
+									<img src="assets/img/AjmalRoseWood.png" alt="Ajmal Rose Wood (Аджмал Руз Вуд)" class="img-responsive img-thumbnail">
 								</td>
-								<td class="vert-align"><a href="#">Безумный макс</a></td>
+								<td class="vert-align"><a href="#">Ajmal Rose Wood (Аджмал Руз Вуд), 100мл</a></td>
 								<td class="text-center vert-align">2015</td>
-								<td class="text-center vert-align"><span class="badge">7.8</span></td>
+								<td class="text-center vert-align"><span class="badge">100.00</span></td>
 							</tr>
 
 						</tbody>
