--- a/show4.html
+++ b/show4.html
@@ -68,38 +68,38 @@
 						</div>
 					</form>
 
-					<h1>Burberry Body («Барберри Боди»)</h1>
+					<h1>Burberry Brit Rhythm (Барбери Брит Ритм)</h1>
 					<hr>
 
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/IfcGWGZ1YD4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/RcnLrjAaDVY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="well info-block text-center">
-						Год: <span class="badge">2011</span>
-						Группа ароматов: <span class="badge">фруктовые, шипровые</span><br>
-						Базовые ноты: <span class="badge">амбра, ваниль, кашемировое дерево, сандаловое дерево мускус</span>
+						Год: <span class="badge">2014</span>
+						Группа ароматов: <span class="badge">цветочные, мускусные, древесные</span><br>
+						Базовые ноты: <span class="badge">амбра, ветивер, мускус, древесина</span>
 					</div>
 
 					<div class="margin-8"></div>
 
-					<h2>Описание Burberry Body («Барберри Боди»)</h2>
+					<h2>Burberry Brit Rhythm (Барбери Брит Ритм)</h2>
 					<hr>
 
 					<div class="well">
-						Совсем новый женский аромат от известного английского бренда, чьи продажи одновременно стартовали в 150 странах мира 1 сентября 2011. Яркий, сладкий аромат, сочетающий в себе сладкие фруктовые и страстные восточные ноты.​
-						Дизайнеры Барберри специально для нового парфюма разработали непривычный для этой марки флакон. Боди упакован в изящную и тонкую бутылочку, по форме напоминающий классическую «гильзу» для помады.​
-						Сладкий фруктовый запах Body перекликается с более привычным ароматом от Барберри – Weekend. Weekend – это вкусные и позитивные духи, где главную роль играет шиповник и мандарин.​
+						Пикантный женский аромат Burberry Brit Rhythm - это выразительный парфюм, который обладает утонченным цветочным, древесный и мускусные. Это потрясающая история смелости и великолепия, зажигательные ритмы рок-н-ролла заряжают положительной энергетикой и красотой. Центральным компонентом букета становится очаровательная английская фиалка, рождающая ореол невиданной красоты и нежности. Однако открывает букет трепетная трель лаванды и нероли, объединенная удивительной пикантностью розового перца, ставшего важным оттенком в сексуальности и пикантности букета. Центральный флер подчеркнут душистой сладостью ежевики, изумительной невинностью цветов апельсина, медовой сладостью пиона и мощным великолепием ириса. Наталли Четто и Антуан Мезондью стали создателями этого великолепного букета, завершив композицию сочетанием чувственного мускусно-амбрового сплетения в окружении потрясающей древесины. В целом рождается уникальный коктейль нежности и сексуальной энергетики, дивной силы духа и зажигательных ритмов. Казалось бы, романтичный цветочный аккорд в нем постепенно переходит в силу древесно-мускусных сочетаний. Потрясающие духи Burberry Brit Rhythm идеально подходят к ярким вечерним образам, стильным нарядам для особого случая.
 					</div>
 
 					<div class="margin-8"></div>
 
-					<h2>Отзывы об Burberry Body («Барберри Боди»)</h2>
+					<h2>Отзывы об Burberry Brit Rhythm (Барбери Брит Ритм)</h2>
 					<hr>
 
 					<div class="panel panel-info">
-						<div class="panel-heading"><i class="glyphicon glyphicon-user"><span>Алек Сандра</span></i></div>
+						<div class="panel-heading"><i class="glyphicon glyphicon-user"><span>Elena Shcherbakova</span></i></div>
 						<div class="panel-body">
-							Это самый прекрасный аромат, я не могу без него жить.
+							Антуан Мезондьё. Хороший парфюмер! и жена у него парфюмер .Shyamala Maisondieu.
+
+
 						</div>
 					</div>
 
@@ -180,27 +180,27 @@
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Ajmal Rose Wood (Аджмал Руз Вуд)</a>
+									<a href="show3.html">Ajmal Rose Wood (Аджмал Руз Вуд)</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Burberry Brit Rhythm (Барбери Брит Ритм)</a>
+									<a href="show4.html">Burberry Brit Rhythm (Барбери Брит Ритм)</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Ex Nihilo Fleur Narcotique (Экс Нихило Флер Наркотик)</a>
+									<a href="show5.html">Ex Nihilo Fleur Narcotique (Экс Нихило Флер Наркотик)</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Issey Miyake — Lune D’Issey</a>
+									<a href="show6.html">Issey Miyake — Lune D’Issey</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Lanvin Eclat D'arpege (Ланвин Эклат Д'арпеж)</a>
+									<a href="show7.html">Lanvin Eclat D'arpege (Ланвин Эклат Д'арпеж)</a>
 								</li>
 
 							</ul>
