--- a/show7.html
+++ b/show7.html
@@ -68,38 +68,39 @@
 						</div>
 					</form>
 
-					<h1>Burberry Body («Барберри Боди»)</h1>
+					<h1>Lanvin Eclat D'arpege (Ланвин Эклат Д'арпеж)</h1>
 					<hr>
 
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/IfcGWGZ1YD4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/ivrWiNn9dSo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="well info-block text-center">
-						Год: <span class="badge">2011</span>
-						Группа ароматов: <span class="badge">фруктовые, шипровые</span><br>
-						Базовые ноты: <span class="badge">амбра, ваниль, кашемировое дерево, сандаловое дерево мускус</span>
+						Год: <span class="badge">2002</span>
+						Группа ароматов: <span class="badge">цветочные, фруктовые</span><br>
+						Базовые ноты: <span class="badge">амбра, белый ливанский кедр, мускус</span>
 					</div>
 
 					<div class="margin-8"></div>
 
-					<h2>Описание Burberry Body («Барберри Боди»)</h2>
+					<h2>Lanvin Eclat D'arpege (Ланвин Эклат Д'арпеж)</h2>
 					<hr>
 
 					<div class="well">
-						Совсем новый женский аромат от известного английского бренда, чьи продажи одновременно стартовали в 150 странах мира 1 сентября 2011. Яркий, сладкий аромат, сочетающий в себе сладкие фруктовые и страстные восточные ноты.​
-						Дизайнеры Барберри специально для нового парфюма разработали непривычный для этой марки флакон. Боди упакован в изящную и тонкую бутылочку, по форме напоминающий классическую «гильзу» для помады.​
-						Сладкий фруктовый запах Body перекликается с более привычным ароматом от Барберри – Weekend. Weekend – это вкусные и позитивные духи, где главную роль играет шиповник и мандарин.​
+						Аромат Lanvin Eclat D'arpege был выпущен в 2003 году к 75-летнему юбилею другого классического аромата от торгового дома Lanvin - Arpege. Автором аромата стал дизайнер Альбер Эльбаз. Этот парфюм стал как бы свежим и более молодым продолжением известного классического аромата и создавался специально для молодых современных женщин в возрасте от 18 до 30 лет. Однако предложенные возрастные рамки не означают, что аромат этой туалетной воды не может понравиться женщине более старшего возраста.
+						Lanvin Eclat D'arpege - легок и прозрачен, как утренний рассвет и чистейшие капельки росы на обновленных ночной прохладой лепестках цветов, трогателен и нежен, как едва заметная утренняя дымка над поверхностью реки, едва уловим и в то же время вполне отчетлив, как лучи солнца, начинающие пробиваться из-за горизонта.
+						Благодаря легкости и ненавязчивости этого аромата его можно использовать в любой ситуации и в любое время суток. Утром он поможет взбодриться и подарит заряд хорошего настроения и весеннего тепла, в течение дня он будет поддерживать, и придавать сил для все новых и новых побед, а вечером поможет расслабиться и создать трогательную романтичную атмосферу. И не зависимо от ситуации аромат будет окутывать свою обладательницу едва уловимой аурой нежности, чувственности и привлекательности, которые обязательно заметит тот, для кого предназначаются эти чувства.
+						Изящный круглый флакон сиреневого цвета выглядит достаточно просто, но именно это и добавляет ему элегантности. Прозрачная упаковка этого парфюма подчеркивает его открытость и легкость, соединенные с изяществом и особенным стилем Lanvin, который угадывается в каждой детали и каждой ноте этого элегантного парфюма уже успевшего завоевать популярность очень многих женщин.
 					</div>
 
 					<div class="margin-8"></div>
 
-					<h2>Отзывы об Burberry Body («Барберри Боди»)</h2>
+					<h2>Отзывы об Lanvin Eclat D'arpege (Ланвин Эклат Д'арпеж)</h2>
 					<hr>
 
 					<div class="panel panel-info">
-						<div class="panel-heading"><i class="glyphicon glyphicon-user"><span>Алек Сандра</span></i></div>
+						<div class="panel-heading"><i class="glyphicon glyphicon-user"><span>Елена Громова</span></i></div>
 						<div class="panel-body">
-							Это самый прекрасный аромат, я не могу без него жить.
+							Очень люблю этот аромат, на тёплую весну или прохладный летний вечер))
 						</div>
 					</div>
 
@@ -180,27 +181,27 @@
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Ajmal Rose Wood (Аджмал Руз Вуд)</a>
+									<a href="show3.html">Ajmal Rose Wood (Аджмал Руз Вуд)</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Burberry Brit Rhythm (Барбери Брит Ритм)</a>
+									<a href="show4.html">Burberry Brit Rhythm (Барбери Брит Ритм)</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Ex Nihilo Fleur Narcotique (Экс Нихило Флер Наркотик)</a>
+									<a href="show5.html">Ex Nihilo Fleur Narcotique (Экс Нихило Флер Наркотик)</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Issey Miyake — Lune D’Issey</a>
+									<a href="show6.html">Issey Miyake — Lune D’Issey</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Lanvin Eclat D'arpege (Ланвин Эклат Д'арпеж)</a>
+									<a href="show7.html">Lanvin Eclat D'arpege (Ланвин Эклат Д'арпеж)</a>
 								</li>
 
 							</ul>
