--- a/show1.html
+++ b/show1.html
@@ -68,38 +68,38 @@
 						</div>
 					</form>
 
-					<h1>Burberry Body («Барберри Боди»)</h1>
+					<h1>Paco Rabanne Invictus (Пако Рабан Инвиктус)</h1>
 					<hr>
 
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/IfcGWGZ1YD4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/pZVI9u4g9Ek" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="well info-block text-center">
-						Год: <span class="badge">2011</span>
-						Группа ароматов: <span class="badge">фруктовые, шипровые</span><br>
-						Базовые ноты: <span class="badge">амбра, ваниль, кашемировое дерево, сандаловое дерево мускус</span>
+						Год: <span class="badge">2013</span>
+						Группа ароматов: <span class="badge">водные, древесные</span><br>
+						Базовые ноты: <span class="badge">дубовый мох, пачули, серая амбра</span>
 					</div>
 
 					<div class="margin-8"></div>
 
-					<h2>Описание Burberry Body («Барберри Боди»)</h2>
+					<h2>Paco Rabanne Invictus (Пако Рабан Инвиктус)</h2>
 					<hr>
 
 					<div class="well">
-						Совсем новый женский аромат от известного английского бренда, чьи продажи одновременно стартовали в 150 странах мира 1 сентября 2011. Яркий, сладкий аромат, сочетающий в себе сладкие фруктовые и страстные восточные ноты.​
-						Дизайнеры Барберри специально для нового парфюма разработали непривычный для этой марки флакон. Боди упакован в изящную и тонкую бутылочку, по форме напоминающий классическую «гильзу» для помады.​
-						Сладкий фруктовый запах Body перекликается с более привычным ароматом от Барберри – Weekend. Weekend – это вкусные и позитивные духи, где главную роль играет шиповник и мандарин.​
+						Paco Rabanne Invictus («Пако Рабанн. Инвиктус») – это новый парфюм для мужчин 2013 года. Принадлежит семейству водных, древесных групп ароматов. Яркий, спортивный и бодрящий букет подойдет смелым, активным и оптимистичным мужчинам.​
+						Парфюм выделит самые выдающиеся акценты в характере своего обладателя и добавит образу шарма, открытости и современности. Прекрасный вариант для всех случаев – парфюм для настоящего победителя! Также для мужчин, ценящих динамичный стиль, мы можем предложить освежающий аромат Marc O'Polo Pure Morning Man.​	​
+						Верхние ноты Paco Rabanne Invictus открываются свежими мотивами морских нот и грейпфрута. Сердце аромата окутывает уютными нотами лаврового листа и жасмина. В завершении композиции мягко сочетаются теплые тона пачули, гваякового дерева, амбры и дубового мха.​
 					</div>
 
 					<div class="margin-8"></div>
 
-					<h2>Отзывы об Burberry Body («Барберри Боди»)</h2>
+					<h2>Отзывы об Paco Rabanne Invictus (Пако Рабан Инвиктус)</h2>
 					<hr>
 
 					<div class="panel panel-info">
-						<div class="panel-heading"><i class="glyphicon glyphicon-user"><span>Алек Сандра</span></i></div>
+						<div class="panel-heading"><i class="glyphicon glyphicon-user"><span>Jayson Young</span></i></div>
 						<div class="panel-body">
-							Это самый прекрасный аромат, я не могу без него жить.
+							Самый любимый мой аромат обожаю.
 						</div>
 					</div>
 
@@ -180,27 +180,27 @@
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Ajmal Rose Wood (Аджмал Руз Вуд)</a>
+									<a href="show3.html">Ajmal Rose Wood (Аджмал Руз Вуд)</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Burberry Brit Rhythm (Барбери Брит Ритм)</a>
+									<a href="show4.html">Burberry Brit Rhythm (Барбери Брит Ритм)</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Ex Nihilo Fleur Narcotique (Экс Нихило Флер Наркотик)</a>
+									<a href="show5.html">Ex Nihilo Fleur Narcotique (Экс Нихило Флер Наркотик)</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Issey Miyake — Lune D’Issey</a>
+									<a href="show6.html">Issey Miyake — Lune D’Issey</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Lanvin Eclat D'arpege (Ланвин Эклат Д'арпеж)</a>
+									<a href="show7.html">Lanvin Eclat D'arpege (Ланвин Эклат Д'арпеж)</a>
 								</li>
 
 							</ul>
