--- a/show3.html
+++ b/show3.html
@@ -68,38 +68,36 @@
 						</div>
 					</form>
 
-					<h1>Burberry Body («Барберри Боди»)</h1>
+					<h1>Ajmal Rose Wood (Аджмал Руз Вуд)</h1>
 					<hr>
 
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/IfcGWGZ1YD4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/mVwzuCYDgjk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="well info-block text-center">
-						Год: <span class="badge">2011</span>
-						Группа ароматов: <span class="badge">фруктовые, шипровые</span><br>
-						Базовые ноты: <span class="badge">амбра, ваниль, кашемировое дерево, сандаловое дерево мускус</span>
+						Год: <span class="badge">2015</span>
+						Группа ароматов: <span class="badge">цветочные, восточные, древесные</span><br>
+						Базовые ноты: <span class="badge">уд, древесные ноты, пудровые ноты</span>
 					</div>
 
 					<div class="margin-8"></div>
 
-					<h2>Описание Burberry Body («Барберри Боди»)</h2>
+					<h2>Ajmal Rose Wood (Аджмал Руз Вуд)</h2>
 					<hr>
 
 					<div class="well">
-						Совсем новый женский аромат от известного английского бренда, чьи продажи одновременно стартовали в 150 странах мира 1 сентября 2011. Яркий, сладкий аромат, сочетающий в себе сладкие фруктовые и страстные восточные ноты.​
-						Дизайнеры Барберри специально для нового парфюма разработали непривычный для этой марки флакон. Боди упакован в изящную и тонкую бутылочку, по форме напоминающий классическую «гильзу» для помады.​
-						Сладкий фруктовый запах Body перекликается с более привычным ароматом от Барберри – Weekend. Weekend – это вкусные и позитивные духи, где главную роль играет шиповник и мандарин.​
+						Древесно-цветочное чудо Востока нашло сочетание в нотах аромата Ajmal Rose Wood, выпущенного в конце 2015 года вместе с ароматом Orchidee Celeste. Нежный, таинственный и притягательный аромат с первых аккордов звучит многообещающе и роскошно, завораживая своими переплетениями. Аромат открывается цветочными мотивами с ярким и вспыльчивым ароматом розы в неистовом сочетании и совершенстве с бодрящими специями. Её сияние и восторг прекрасно дополняется вкраплениями пудровых, чувственных и пьянящих нот, создающее впечатление полной эйфории и свободы. Финальные аккорды композиции до достоинству принадлежат окутывающим древесным нотам с пряным ароматов уда и мускуса. Аромат Ajmal Rose Wood был выпущен как универсальный аромат для мужчин и женщин, в нем каждый найдет что-то своё особенное и неповторимое, однако женская половина человечества относится к нему с большей любовью и вниманием.​
 					</div>
 
 					<div class="margin-8"></div>
 
-					<h2>Отзывы об Burberry Body («Барберри Боди»)</h2>
+					<h2>Отзывы об Ajmal Rose Wood (Аджмал Руз Вуд)</h2>
 					<hr>
 
 					<div class="panel panel-info">
-						<div class="panel-heading"><i class="glyphicon glyphicon-user"><span>Алек Сандра</span></i></div>
+						<div class="panel-heading"><i class="glyphicon glyphicon-user"><span>Hoodscentz</span></i></div>
 						<div class="panel-body">
-							Это самый прекрасный аромат, я не могу без него жить.
+							Great review bro! Def need to try this line eventually
 						</div>
 					</div>
 
@@ -180,27 +178,27 @@
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Ajmal Rose Wood (Аджмал Руз Вуд)</a>
+									<a href="show3.html">Ajmal Rose Wood (Аджмал Руз Вуд)</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Burberry Brit Rhythm (Барбери Брит Ритм)</a>
+									<a href="show4.html">Burberry Brit Rhythm (Барбери Брит Ритм)</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Ex Nihilo Fleur Narcotique (Экс Нихило Флер Наркотик)</a>
+									<a href="show5.html">Ex Nihilo Fleur Narcotique (Экс Нихило Флер Наркотик)</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Issey Miyake — Lune D’Issey</a>
+									<a href="show6.html">Issey Miyake — Lune D’Issey</a>
 								</li>
 
 								<li class="list-group-item list-group-warning">
 									<span class="badge"></span>
-									<a href="show.html">Lanvin Eclat D'arpege (Ланвин Эклат Д'арпеж)</a>
+									<a href="show7.html">Lanvin Eclat D'arpege (Ланвин Эклат Д'арпеж)</a>
 								</li>
 
 							</ul>
